# wiki-helper

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
examples/: README.md  python_qna.ipynb
research/: compare_models.ipynb
resources/: download-models.sh
src/wiki_helper/: __init__.py  __main__.py  configuration.py  logger.py
src/wiki_helper/knowledge_base/impl/: knowledge_base.py
src/wiki_helper/qna/: __init__.py  generative_model.py  knowledge_base.py  system.py
src/wiki_helper/qna/impl/: generative_model.py  knowledge_base.py  rag_system.py  system.py
src/wiki_helper/storing/: storage.py
src/wiki_helper/storing/impl/: storage.py
src/wiki_helper/system/: __init__.py  rag_system.py
src/wiki_helper/transport/routers/: answer.py  delete.py  train.py
widget_extension/: background.js  manifest.json
widget_extension/scripts/: dragResize.js  events.js  main.js  network.js  ui.js
widget_extension/styles/: style.css
